# modoc

./: README.rst  pyproject.toml  run_tests.sh
modoc/: __init__.py  doc.py
tests/: test_doc.py
