[tool.poetry]
name = "modoc"
version = "0.2.0"

description = ""
authors = ["uigctaw <uigctaw@metadata.social>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^1.2.0"
ruff = "^0.4.8"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",  # flake8-annotations
    "C408",  # unnecessary-collection-call
    "D10",  # undocumented-*
    "D203",  # "1 blank line required before class docstring"
    "D213",  # "Multi-line docstring summary should start at the second line"
    "EM101",  # raw-string-in-exception
    "EM102",  #  f-string-in-exception
    "ISC003",  #  excplicit-string-concatenation
    "RET504",  # unnecessary-assign
    "RET505",  # superfluous-else-return
    "S101",  # assert
    "TRY003",  # "Avoid specifying long messages [...]"
]

[tool.ruff.lint.per-file-ignores]
"tests/test_doc.py" = ["ARG001", "B008", "PLR0913"]
